--- a/src/components/maker/maker.module.css
+++ b/src/components/maker/maker.module.css
@@ -4,6 +4,7 @@
 .maker {
   width: 100%;
   height: 100%;
+  max-width: 80rem;
   display: flex;
   flex-direction: column;
   background-color: makerWhite;
@@ -12,6 +13,7 @@
 .container {
   display: flex;
   flex: 1; /* 중간에 여백을 가득 채울 수 있도록*/
+  min-height: 0;
 }
 
 @media screen and (max-width: mediaQuery) {
