--- a/src/components/preview/preview.module.css
+++ b/src/components/preview/preview.module.css
@@ -2,6 +2,7 @@
 
 .preview {
   flex-basis: 50%;
+  overflow-y: auto;
 }
 
 .title {
@@ -13,7 +14,6 @@
 
 .cards {
   width: 100%;
-  height: 100%;
   padding: 0.5em 2em;
   display: flex;
   flex-direction: column;
